--- a/src/Layout/Left/index.less
+++ b/src/Layout/Left/index.less
@@ -1,5 +1,39 @@
 .main {
-    display: inline-block;
-    width: 100px;
-    text-align: center;
+    display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // width: 60px;
+    // text-align: center;
+    // border-right: 1px solid rgba(31, 28, 35, .08);
+
+    .nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 60px;
+        text-align: center;
+        border-right: 1px solid rgba(31, 28, 35, .08);
+
+        .navItem {
+            width: 32px;
+            height: 32px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &:hover {
+                background-color: #e6f4ff;
+            }
+
+            &:first-child {
+                margin-top: 16px;
+            }
+        }
+
+        .navItemActive {
+            background-color: #e6f4ff;
+        }
+    }
+
+
 }
