--- a/src/Components/Cmp/index.less
+++ b/src/Components/Cmp/index.less
@@ -1,6 +1,35 @@
 .main {
     position: absolute;
-    padding: 4px 8px;
-    box-sizing: border-box;
-    border: solid 2px #02dcf7;
+
+    img {
+        height: 100%;
+        width: 100%;
+    }
+
+    .editStyle {
+        box-sizing: content-box;
+        position: absolute;
+
+        .block {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            border: 1px solid #1677ff;
+            background-color: #fff;
+        }
+    }
+
+    .unselected {
+        border: solid 1px transparent;
+
+        &:hover {
+            border: solid 2px #1677ff;
+            background-color: rgba(225, 241, 255, .6);
+        }
+
+    }
+
+    .selected {
+        border: solid 1px #1677ff;
+    }
 }
